# Proteomics_data_download

./: .env.example  .gitignore  CLAUDE.md  GSE266455_results.json  GSE266455_results_table.md  SEQUENCING_TECHNOLOGY_ANALYSIS.md  classification_results.json  debug_hierarchy.txt  debug_hierarchy_families.txt  debug_hierarchy_standalone.txt  debug_phase1_context.json  debug_phase1_summary.json  debug_report.md  debug_search_hierarchy.py  multiomics_results.json  multiomics_results_tableGSE266455.md  pyproject.toml  run_selector_debug.py  selector_results_debug.json  selector_results_table.md  test_all_cases.py
.omc/: .project-memory.json.tmp.8f72d9cb-7507-4b97-9ffc-3a135b3842f0  project-memory.json
.omc/autopilot/: spec.md
.omc/sessions/: 06a75077-422f-45b6-9035-85f854fca503.json  0714d2c5-0138-41cd-98b7-0d00a3f7a701.json  (+6 more)
data/: geo_agent.db
debug_family_soft/: GSE268991_family.soft  GSE280852_family.soft  GSE283984_family.soft  GSE291290_family.soft  GSE303197_family.soft  GSE303984_family.soft  GSE317605_family.soft  GSE318420_family.soft
docs/: Architecture.md  LLM_Integration_Checklist.md  LLM_Integration_Summary.md  LLM_Providers.md  LLM_sample_selector.md  Parallel_Processing_Guide.md  Usage_Guide.md  developer_notes_family_soft_findings.md  developer_notes_geo_superseries_subseries.md  geo_upload_patterns.md  search_report_example.md
geo_agent/: __init__.py  agent.py  cli.py  config.py  example.md
tests/: run_pipeline.py  test_llm_provider.py  test_parse_family_soft.py  test_sample_selector.py  test_standalone_sample_selector.py  verify_llm_setup.py
(+394 files in other folders)
